# automacao_extracao_contatos_ia

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: contatos.xlsx
data/raw/: sites.txt
src/: main.py
src/extraction/: __init__.py
src/extraction/controllers/: __init__.py  instagram.py  website.py
src/extraction/models/: __init__.py
src/extraction/services/: __init__.py  ai_service.py
src/messaging/: __init__.py
src/messaging/controllers/: __init__.py  module_example.py
src/messaging/models/: __init__.py
src/messaging/services/: ai_service.py
src/persistence/: __init__.py
src/persistence/excel/: __init__.py  excel_writer.py
src/tests/: __init__.py  test_excel_persistence_mock.py
src/utils/: __init__.py  abstract_class.py  config.py  imports.py
src/utils/utils_functions/: __init__.py  browser_utils.py  color_manager.py  file_utils.py  init_browser.py  whatsapp_utils.py
